--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="container">
+        <!--left-side-->
         <div class="left-side">
             <div class="profile">
                 <div class="imgbox">
@@ -73,12 +74,26 @@
                     <span class="text">Alison</span>
                 </li>
              </ul>
-        </div>  
-        <div class="contactinfo">
-            <h3 class="title">sinature</h3>
-            <h3 class="sig">B.Amani</h3>
-        </div>        
         </div>
+        <div class="contactinfo">
+            <h2 class="title">Language</h2>
+            <ul>
+                <li>
+                    <span class="text">English</span>
+                </li>
+                <li>
+                    <span class="text">Hindi</span>
+                </li>
+                <li>
+                    <span class="text">Telugu</span>
+                </li>
+                <li>
+                    <span class="text">Marathi</span>
+                </li>
+            </ul>
+        </div>
+    </div>
+        <!--Right-side-->
         <div class="right-side">
             <div class="about">
                 <h2 class="title2">profile</h2>
@@ -129,7 +144,7 @@
                         </span>
                     </li>
                     <li>
-                        <span class="text">python</span>
+                        <span class="text">PYTHON</span>
                         <span class="percentage">
                             <div style="width: 85%;" ></div>
                         </span>
@@ -155,22 +170,10 @@
                 </ul>
             </div>
             <div class="about">
-                <h2 class="title2">Language</h2>
-                <ul>
-                    <li>
-                        <span class="text">English</span>
-                    </li>
-                    <li>
-                        <span class="text">Hindi</span>
-                    </li>
-                    <li>
-                        <span class="text">Telugu</span>
-                    </li>
-                    <li>
-                        <span class="text">Marathi</span>
-                    </li>
-                </ul>
+                <h3 class="title2">sinature</h3>
+                <h3 class="sig">B.Amani</h3>
             </div>
+            
         </div>
     </div>
 </body>
